Fix responsiveness layout
Fix image too big on mobile screen

--- a/style.css
+++ b/style.css
@@ -92,6 +92,8 @@ li {
 	img {
 		object-fit: cover;
 		align-self: center;
+		width: 100%;
+		max-width: 500px;
 	}
 
 	button {
